data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2829.wast
;; 8. **Boundary Condition Checks**:    - Test boundary conditions (e.g., zero/non-zero checks) in `br_if` leading to return. Validate if small deviations or incorrect evaluations in checking conditions result in improper returns.

(assert_invalid
  (module
    (func $boundary-condition-check (result i32)
      (i32.const 0)
      (br_if 0 (return))
    )
  )
  "type mismatch"
)